# aoc2024

./: .clang-format  .clang-tidy  CMakeLists.txt
day4/: CMakeLists.txt  day4-1.cpp  day4-2.cpp
day6/: CMakeLists.txt  day6-1.cpp
